# kabena-ml

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
experiments/ch14/: RESULTS.md
experiments/ch14/niveau1_notebook/: 01_cifar10_pytorch.ipynb  02_cifar10_tensorflow.ipynb  03_cifar100_pytorch_vs_tf.ipynb  04_imagenet_pytorch_vs_tf.ipynb
experiments/ch14/niveau2_scripts/: reproduce_ch14_pytorch.py  reproduce_ch14_tensorflow.py
experiments/ch14/niveau3_mlops/: reproduce_ch14_mlops.py
experiments/ch14/niveau3_mlops/conf/: ch14_config.yaml
experiments/chapter14/: README.md
experiments/chapter14/notebooks/: 01_cifar10_pytorch.ipynb
kabena/: __init__.py
kabena/core/: __init__.py  config.py  filter.py
kabena/integrations/: __init__.py  sklearn_wrapper.py  tf_utils.py  torch_utils.py
kabena/utils/: __init__.py  logger.py
kabena_ml/: __init__.py
kabena_ml/core/: __init__.py  config.py  filter.py
kabena_ml/integrations/: sklearn_wrapper.py  tf_utils.py  torch_utils.py
kabena_ml/utils/: __init__.py  logger.py
tests/: test_core.py  test_sklearn.py  test_torch.py
tutorials/: README.md
tutorials/niveau1_notebook/: 01_regression_lineaire.ipynb  02_classification_logistique.ipynb  03_mlp_pytorch.ipynb  04_cnn_vision_pytorch.ipynb  05_nlp_tensorflow.ipynb  06_mlp_pytorch_vs_tf.ipynb  07_cnn_pytorch_vs_tf.ipynb  08_transformer_pytorch_vs_tf.ipynb  09_dl_imbalanced_pytorch_vs_tf.ipynb  10_nlp_tabular_lowresource_ch15.ipynb  11_ablation_complete_ch16.ipynb  12_low_resource_ml_worldwide_ch17.ipynb  13_noise_robustness_pytorch.ipynb  14_noise_robustness_tf_hf.ipynb  15_low_resource_languages_formal_protocol.ipynb
tutorials/niveau2_scripts/: pytorch_project.py  sklearn_project.py  tensorflow_project.py
tutorials/niveau2_scripts/deep_learning/: dl_pytorch_vs_tf.py
tutorials/niveau3_mlops/: train_dl_mlops.py  train_mlops.py
tutorials/niveau3_mlops/conf/: config.yaml
(+6 files in other folders)
