[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "kabena-ml"
version = "1.1.0"
description = "K-ABENA: K-Adaptive Backpropagation with Error-based N-exclusion Algorithm"
authors = [{name = "M. Bonbhel", email = "contact@neurosoft-ia.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["machine-learning", "deep-learning", "gradient", "optimization", "K-ABENA", "noise-robustness", "label-noise"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Natural Language :: French",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
]
[project.optional-dependencies]
sklearn = ["scikit-learn>=1.3"]
torch   = ["torch>=2.0"]
tf      = ["tensorflow>=2.12"]
mlops   = ["mlflow>=2.8", "hydra-core>=1.3", "omegaconf>=2.3", "dvc>=3.0"]
dev     = ["pytest>=7.4", "pytest-cov>=4.1", "black", "ruff", "jupyter"]
all     = ["kabena-ml[sklearn,torch,tf,mlops,dev]"]
[project.urls]
Homepage   = "https://github.com/Bonbhel/kabena-ml"
Repository = "https://github.com/Bonbhel/kabena-ml"
Book       = "https://yekoelite.com/kabena-book"
[tool.setuptools.packages.find]
include = ["kabena_ml*"]
exclude = ["configs*", "tutorials*", "experiments*", "tests*"]
[tool.black]
line-length = 100
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/test_torch.py" = ["E402"]
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short --cov=kabena_ml"
